change index and template text

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div id="navbarContainer"></div>
-        <h1>Template Title</h1>
-        <p>Template Text</p>
+        <h1>Welcome</h1>
+        <p>Here's some text! Amazing!</p>
     </body>
     <script>
         $("#navbarContainer").load("navbar.html");
