--- a/index.html
+++ b/index.html
@@ -8,8 +8,27 @@
     </head>
     <body>
         <div id="navbarContainer"></div>
-        <h1>Welcome</h1>
-        <p>Here's some text! Amazing!</p>
+        <h1 class="alignCenter">Welcome</h1>
+        <div class></div>
+        <h3>We are planning to create:</h3>
+        <ul>
+            <li>
+                <p>Minesweeper</p>
+            </li>
+            <li>
+                <p>Conway's Game of Life</p>
+            </li>
+            <li>
+                <p>Breakout</p>
+            </li>
+            <li>
+                <p>Pong</p>
+            </li>
+            <li>
+                <p>Quadratic Solver</p>
+            </li>
+        </ul>
+        
     </body>
     <script>
         $("#navbarContainer").load("navbar.html");
