move minesweeper out of file b/c paths are annoying

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>We are planning to create:</h3>
         <ul>
             <li>
-                <p>Minesweeper</p>
+                <a href="minesweeper/minesweeper.html">Minesweeper</a>
             </li>
             <li>
                 <p>Conway's Game of Life</p>
