--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>We are planning to create:</h3>
         <ul>
             <li>
-                <a href="minesweeper/minesweeper.html">Minesweeper</a>
+                <a href="minesweeper.html">Minesweeper</a>
             </li>
             <li>
                 <p>Conway's Game of Life</p>
