--- a/minesweeper.html
+++ b/minesweeper.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>>Minesweeper</title>
+        <title>Minesweeper</title>
 
         <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
