add extra minesweeperContainer for future styling

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -13,7 +13,9 @@
         <div id="navbarContainer"></div>
         <h1 class="textCenter">Minesweeper</h1>
         <div id="gameContainer" class="center textCenter">
-            
+            <div id="minesweeperContainer">
+
+            </div>
         </div>
 
         <div id="inputContainer" class="container">
