put homepage text inside container div

--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
     </head>
     <body>
         <div id="navbarContainer"></div>
-        <h1 class="alignCenter">Welcome</h1>
-        <div class></div>
-        <h3>We are planning to create:</h3>
-        <ul>
-            <li>
-                <a href="minesweeper.html">Minesweeper</a>
-            </li>
-            <li>
-                <p>Conway's Game of Life</p>
-            </li>
-            <li>
-                <p>Breakout</p>
-            </li>
-            <li>
-                <p>Pong</p>
-            </li>
-            <li>
-                <p>Quadratic Solver</p>
-            </li>
-        </ul>
+        <div class="container">
+            <h1 class="alignCenter">Welcome</h1>
+            <h3>We are planning to create:</h3>
+            <ul>
+                <li>
+                    <a href="minesweeper.html">Minesweeper</a>
+                </li>
+                <li>
+                    <p>Conway's Game of Life</p>
+                </li>
+                <li>
+                    <p>Breakout</p>
+                </li>
+                <li>
+                    <p>Pong</p>
+                </li>
+                <li>
+                    <p>Quadratic Solver</p>
+                </li>
+            </ul>
+        </div>
     </body>
     <script>
         $("#navbarContainer").load("navbar.html");
