change button text to New Game

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -31,7 +31,7 @@
             <input id="mineCount" name="mineCount" type="number" value="50">
 
             <br><br>
-            <button onclick="startGame(game);">Start</button>
+            <button onclick="startGame(game);">New Game</button>
         </div>
     </body>
     <script>
