--- a/minesweeper.html
+++ b/minesweeper.html
@@ -13,6 +13,11 @@
         <div id="navbarContainer"></div>
         <h1 class="textCenter">Minesweeper</h1>
         <div id="gameContainer" class="center textCenter">
+            <div id="scoreContainer" class="clearfix">
+                <div id="minesBoard" class="scoreboard">000</div>
+                <div id="gameStatus"></div>
+                <div id="timeBoard" class="scoreboard">000</div>
+            </div>
             <div id="minesweeperContainer">
 
             </div>
