--- a/snake.html
+++ b/snake.html
@@ -22,7 +22,8 @@
         }
         </style>
     </head>
-    <body>
+    <body onload="loop()">
+        <h2 style="position: absolute; bottom: 0px; top: 570px; left: 500px; right: 0px;">Score:  <span id="snakeScore"></span></h2>
         <canvas width="400" height="400" id="Snake"></canvas>
         <script src="snake.js"></script>
     </body>
