add (useless) autosolve button, add impl of queue, add start of solver script

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -6,6 +6,7 @@
         <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+        <script src="queue.js"></script>
         <script src="minesweeper.js"></script>
         <link rel="stylesheet" href="minesweeper.css">
     </head>
@@ -16,6 +17,7 @@
 
         <div id="gameContainer" class="center textCenter">
             <div id="buttonsContainer" class="button-container container">
+                <button id="settingButton" onclick="console.error('Not implemented!');">Auto Solve</button>
                 <button id="newGameButton" onclick="startGame(game);">New Game</button>
                 <button id="settingButton" onclick="openPopup();">Settings</button>
             </div>
