reorganize minesweeper js script files

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -7,7 +7,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <script src="queue.js"></script>
-        <script src="minesweeper.js"></script>
+        <script src="minesweeperGame.js"></script>
+        <script src="minesweeperSolver.js"></script>
+        <script src="minesweeperUtil.js"></script>
         <link rel="stylesheet" href="minesweeper.css">
     </head>
     <body>
