create bad but functional auto solver, change queue to deque

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -6,10 +6,10 @@
         <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-        <script src="queue.js"></script>
+        <script src="deque.js"></script>
+        <script src="minesweeperUtil.js"></script>
         <script src="minesweeperGame.js"></script>
         <script src="minesweeperSolver.js"></script>
-        <script src="minesweeperUtil.js"></script>
         <link rel="stylesheet" href="minesweeper.css">
     </head>
     <body>
@@ -17,7 +17,7 @@
         <h1 class="textCenter">Minesweeper</h1>
 
         <div id="buttonsContainer" class="button-container container">
-            <button id="settingButton" onclick="console.error('Not implemented!');">Auto Solve</button>
+            <button id="settingButton" onclick="solve()">Auto Solve</button>
             <button id="newGameButton" onclick="startGame(game);">New Game</button>
             <button id="settingButton" onclick="openPopup();">Settings</button>
         </div>
