add snake to homepage

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                     <a href="minesweeper.html">Minesweeper</a>
                 </li>
                 <li>
+                    <a href="snake.html">Snake</a>
+                </li>
+                <li>
                     <p>Conway's Game of Life</p>
                 </li>
                 <li>
