add formatting to homepage list

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <h3>We are planning to create:</h3>
             <ul>
                 <li>
-                    <a href="minesweeper.html">Minesweeper</a>
+                    <p><a href="minesweeper.html">Minesweeper</a></p>
                 </li>
                 <li>
-                    <a href="snake.html">Snake</a>
+                    <p><a href="snake.html">Snake</a></p>
                 </li>
                 <li>
                     <p>Conway's Game of Life</p>
