--- a/minesweeper.html
+++ b/minesweeper.html
@@ -47,6 +47,28 @@
             <button type="submit" onclick="closePopup(true);startGame(game);">Save and Start New Game</button>
             <button type="submit" onclick="closePopup(false);">Cancel</button>
         </div>
+
+        <div class="container">
+            <h3 class="center">Credits</h3>
+            <div class="container">
+                <p>
+                    This was created by Stanley Zhong.
+                    The page is written in pure HTML, JavaScript, and CSS.
+                    <br>
+                    The custom fonts used are from FontStruct.
+                    Specifically, the font for the cells in the game grid is <a href="https://fontstruct.com/fontstructions/show/1501665">here</a> 
+                    and the font for the scoreboard is based off of <a href="https://fontstruct.com/fontstructions/show/1462474">this font</a>.
+                    Both use this Creative Commons <a href="http://creativecommons.org/licenses/by-sa/3.0/">License</a>. The final font for the scoreboard uses the same <a href="http://creativecommons.org/licenses/by-sa/3.0/">license</a>.
+                    <br>
+                    Most of the cell visuals (like cell colors) came from this <a href="https://upload.wikimedia.org/wikipedia/commons/1/1e/Minesweeper_Game_Most_Common_Setup.png">Wikimedia image</a>.
+                    The flag is a SVG based on this <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Minesweeper_flag.svg/1024px-Minesweeper_flag.svg.png">Wikimedia image</a>.
+                    <br>
+                    I also used some tricks from StackOverflow. I'm not sure if I have to post every individual thing or not, but it's better to be on the safe side I guess.
+                    The code to prevent the user from highlighting text is from <a href="https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting">here</a>.
+                    The code in the solver to pause execution for some time is from <a href="https://stackoverflow.com/questions/951021/what-is-the-javascript-version-of-sleep">here</a>.
+                </p>
+            </div>
+        </div>
     </body>
     <script>
         $("#navbarContainer").load("navbar.html");
