--- a/minesweeper.html
+++ b/minesweeper.html
@@ -34,6 +34,14 @@
         <br>
 
         <div id="popupContainer" class="container popup">
+            <h2>Controls</h2>
+            <div class="container">
+                <label for="useMiddleClick">Use Middle Click to Open Adjacent Cells</label>
+                <input id="useMiddleClick" name="useMiddleClick" type="checkbox" checked>
+                <br><br>
+                <label for="useDoubleClick">Use Double Click to Open Adjacent Cells</label>
+                <input id="useDoubleClick" name="useDoubleClick" type="checkbox" checked>
+            </div>
             <h2>Auto-Solver</h2>
             <div class="container">
                 <label for="solverPause">Milliseconds Between Solver Moves</label>
