make sure everyone knows the AutoSolver is bad

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -17,7 +17,7 @@
         <h1 class="textCenter">Minesweeper</h1>
 
         <div id="buttonsContainer" class="button-container container">
-            <button id="settingButton" onclick="solve()">Auto Solve</button>
+            <button id="settingButton" onclick="solve()">(Bad) Auto Solve</button>
             <button id="newGameButton" onclick="startGame(game);">New Game</button>
             <button id="settingButton" onclick="openPopup();">Settings</button>
         </div>
