move JS for settings popup to separate file

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -8,6 +8,7 @@
 
         <script src="deque.js"></script>
         <script src="minesweeperUtil.js"></script>
+        <script src="minesweeperSettingsPopup.js"></script>
         <script src="minesweeperGame.js"></script>
         <script src="minesweeperSolver.js"></script>
         <link rel="stylesheet" href="minesweeper.css">
