add correct terminology to settings

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -39,10 +39,10 @@
     <div id="popupContainer" class="container popup">
         <h2>Controls</h2>
         <div class="container">
-            <label for="useMiddleClick">Use Middle Click to Open Adjacent Cells</label>
+            <label for="useMiddleClick">Use Middle Click to Chord (Open Adjacent Cells)</label>
             <input id="useMiddleClick" name="useMiddleClick" type="checkbox" checked>
             <br><br>
-            <label for="useDoubleClick">Use Double Click to Open Adjacent Cells</label>
+            <label for="useDoubleClick">Use Double Click to Chord (Open Adjacent Cells)</label>
             <input id="useDoubleClick" name="useDoubleClick" type="checkbox" checked>
         </div>
         <br>
