update Credits desc

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -97,7 +97,8 @@
                     href="https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting">here</a>.
                 The code in the solver to pause execution for some time is from <a
                     href="https://stackoverflow.com/questions/951021/what-is-the-javascript-version-of-sleep">here</a>.
-                Right now I'm trying to implement a better solver. That is being done with information from <a
+                <br>
+                The solver also implements basic patterns. That information came from <a
                     href="http://www.minesweeper.info/wiki/Strategy">here</a>.
             </p>
         </div>
