add How To Play and Hint buttons, tweak styling

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -21,9 +21,11 @@
     <h1 class="textCenter">Minesweeper</h1>
 
     <div id="buttonsContainer" class="button-container container">
-        <button id="settingButton" onclick="solve()">Auto Solve</button>
-        <button id="newGameButton" onclick="startGame(game);">New Game</button>
+        <button id="howToButton">How To Play</button>
         <button id="settingButton" onclick="openPopup();">Settings</button>
+        <button id="newGameButton" onclick="startGame(game);">New Game</button>
+        <button id="settingButton" onclick="solve()">Auto Solve</button>
+        <button id="hintButton">Hint</button>
     </div>
     <div id="gameContainer" class="center textCenter">
         <div id="scoreContainer" class="clearfix">
